# sports-calendar-hub

./: README.md  debug_ligamx.py  debug_mexico_calendar.py  generate.py  generate_champions_calendar.py  generate_f1.py  generate_football.py  generate_ligamx_calendar.py  generate_mexico_calendar.py  generate_nfl.py  generate_sports_calendar.py  pyproject.toml
.github/workflows/: debug-ligamx.yml  debug-mexico-calendar.yml  generate-calendars.yml  generate-champions-calendar.yml  generate-f1-calendar.yml  generate-football-calendars.yml  generate-ligamx-calendar.yml  generate-mexico-calendar.yml  generate-nfl-calendars.yml  generate-sports-calendar.yml  test-football-data.yml  test-tennis-api.yml
config/: football_calendars.yaml  tennis_players.yaml
docs/: index.html
docs/f1/: formula-1.ics
docs/football/: club-america.ics  real-madrid-champions.ics  real-madrid-laliga.ics
docs/nfl/: black-friday-game.ics  christmas.ics  estelares.ics  miami-dolphins.ics  monday-night-football.ics  playoffs.ics  sunday-night-football.ics  super-bowl.ics  thanksgiving.ics  thursday-night-football.ics
docs/sports/: sports-calendar.ics
docs/tennis/: alcaraz.ics  djokovic.ics  sinner.ics
output/tennis/: alcaraz.ics  sinner.ics
